登录相关内容调整